--- a/unsupervised_learning/kmeans_clustering_from_scratch.ipynb
+++ b/unsupervised_learning/kmeans_clustering_from_scratch.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <u> K-means Clustering from Stratch on 2D points </u>"
+    "# <u> K-means Clustering from Scratch on 2D points </u>"
    ]
   },
   {
