--- a/unsupervised_learning/pca.ipynb
+++ b/unsupervised_learning/pca.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 1: PCA From Stratch"
+    "# Part 1: PCA From Scratch"
    ]
   },
   {
