Fix typo in notebook title for clarity

--- a/unsupervised_learning/em_algorithm_hierarchical_clustering.ipynb
+++ b/unsupervised_learning/em_algorithm_hierarchical_clustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EM Algorithm From Stratch\n",
+    "# EM Algorithm From Scratch\n",
     "\n",
     "I will  implement the EM algorithm on the school information dataset (with the assist of PCA)."
    ]
